calibre-web-automated/auth-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: cwa-auth
spec:
  headers:
    customRequestHeaders:
      CWA-User: admin
