calibre-web-automated/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calibre-web-automated
  labels:
    app: calibre-web-automated
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calibre-web-automated
  template:
    metadata:
      labels:
        app: calibre-web-automated
    spec:
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: config-pvc
        - name: nfs
          nfs:
            server: 192.168.4.84
            path: /mnt/rpool/data
      containers:
        - name: calibre-web-automated
          image: crocodilestick/calibre-web-automated:V3.0.4
          ports:
            - containerPort: 8083
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /cwa-book-ingest
              name: nfs
              subPath: downloads/cwa-watch
            - mountPath: /calibre-library
              name: nfs
              subPath: books
