calibre-web-automated/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calibre-web-automated
spec:
  selector:
    app: calibre-web-automated
  ports:
    - port: 8083
